--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
 <body class="bg-slate-200">
 <div x-data="cryptogram()">
     <div class="flex flex-col items-center justify-center h-screen">
+    <div x-show="victory" class="text-6xl mb-3 text-center text-green-600 bold">Victory!</div>
         <div class="mx-auto w-2xl bg-white p-6 rounded-xl shadow-lg">
-            <div class="text-3xl mb-3">Cryptogram</div>
-
             <div class="flex flex-wrap gap-1.5 font-mono">
                 <template x-for="(char, index) in cryptifyQuote().split('')">
                     <div
                         :class="{
                             'w-[24px] py-2 text-center': true,
-                            'bg-yellow-100': activeLetter == char,
                             'bg-green-100': solutions[char],
-                            'bg-slate-100': !solutions[char] && activeLetter != char,
+                            'bg-yellow-100': !solutions[char] && activeLetter == char,
+                            'bg-slate-100 text-slate-500': !solutions[char] && activeLetter != char,
                         }"
                         x-text="solutions[char] ? solutions[char] : char"
                     ></div>
@@ -37,22 +36,45 @@
                         <input
                             type="text"
                             x-on:focus="highlightLetter(index)"
-                            class="w-10 text-center rounded-r py-1 focus:outline-0 focus:bg-yellow-100"
+                            x-on:input="validateInput($event, index)"
                             x-model="solutions[index]"
+                            class="w-10 text-center rounded-r py-1 focus:outline-0"
+                            :class="{
+                                'bg-yellow-100': !solutions[index] && activeLetter == index,
+                                'bg-green-100': solutions[index]
+                            }"
                         />
                     </div>
                 </template>
             </div>
 
-            <div class="mt-4" x-text="quote"></div>
+            <div
+                class="text-red-600 semibold text-center mt-4"
+                x-effect="setTimeout(() => errorMsg = '', 3000)"
+                x-text="errorMsg"
+                x-transition
+            ></div>
 
-            <div class="mt-4" x-text="cryptifyQuote()"></div>
+            <div class="flex flex-wrap text-2xl mt-4 gap-3 justify-center">
+                <template x-for="(letter, index) in solutions">
+                    <div
+                        x-text="index"
+                        :class="Object.values(solutions).includes(index) ? 'line-through text-slate-300' : ''"
+                    >
+                    </div>
+                </template>
+            </div>
+
+            <div class="flex flex-row justify-center mt-4 border-t border-slate-300">
+                <button @click="reset()" class="bg-slate-600 text-white p-2 rounded-lg mt-4">Reset Puzzle</button>
+            </div>
         </div>
     </div>
 </div>
 
 
 
+<script src="js/quotes.js"></script>
 <script src="js/cryptogram.js"></script>
 </body>
 </html>
